lab-1/cars-block-egress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
 name: noegress
 namespace: travel-agency
spec:
 podSelector:
   matchLabels:
     kubevirt.io/domain: cars-vm
 policyTypes:
   - Egress
